# storage-engine

./: .gitignore  Cargo.toml  Makefile  Readme.md  build.rs
config/: production.yaml
examples/: custom_storage.rs  grpc_client.rs
proto/: msg.proto  service.proto
scripts/: fetch-protos.sh
src/: config.rs  core.rs  error.rs  health.rs  lib.rs  main.rs  server.rs
src/proto/: mod.rs
src/reader/: mod.rs
src/storage/: mod.rs
tests/: integration_tests.rs
