#- Project dependencies and metadata
#- Feature flags (client/server separation)
#- Build configuration

[package]
name = "storage-engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
client = ["tonic/transport"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# gRPC and protobuf
tonic = "0.10"
prost = "0.12"
prost-types = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.39"
thiserror = "2.0.7"
async-trait = "0.1.77"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
chrono = "0.4"
log = "0.4"
env_logger = "0.10"

[[example]]
name = "grpc_client"
required-features = ["client"]