#- Project dependencies and metadata
#- Feature flags (client/server separation)
#- Build configuration

[package]
name = "storage-engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
client = ["tonic/transport"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# gRPC and protobuf
tonic = "0.10"
prost = "0.12"
prost-types = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.39"
thiserror = "2.0.7"
async-trait = "0.1.77"
serde_json = "1.0"
serde_yaml = "0.9"

# AWS SDK
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.5"
http = "0.2"

# OpenTelemetry
opentelemetry = { version = "0.20", features = ["trace"] }
opentelemetry-otlp = { version = "0.13", features = ["trace"] }

uuid = { version = "1.0", features = ["v4"] }

hex = "0.4"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# For async operations
futures = "0.3"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }

[[example]]
name = "grpc_client"
required-features = ["client"]